[package]
name = "puller"
version = "0.1.0"
edition = "2021"
description = "CLI tool for pulling/archiving posts from social platforms"
license = "MIT"
repository = "https://github.com/socialsbase/puller"
readme = "README.md"
keywords = ["cli", "social-media", "content", "devto", "archive"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
async-trait = "0.1"
dotenvy = "0.15"
url = { version = "2.5", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
tokio-test = "0.4"
