[package]
name = "puller"
version = "0.1.0"
edition = "2021"
description = "CLI tool for pulling/archiving posts from social platforms"
license = "MIT"
repository = "https://github.com/socialsbase/puller"
readme = "README.md"
keywords = ["cli", "social-media", "content", "devto", "archive"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
async-trait = "0.1"
dotenvy = "0.15"
url = { version = "2.5", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
tokio-test = "0.4"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy", "user-hooks"]

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
# Enable pedantic and nursery groups
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Allow cargo lints we can't control (transitive dependencies)
multiple_crate_versions = "allow"

# Allow common false positives from pedantic
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
struct_excessive_bools = "allow"

# Allow nursery lints with known issues
missing_const_for_fn = "allow"
significant_drop_tightening = "allow"
option_if_let_else = "allow"

# Cherry-picked restriction lints
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "warn"
print_stdout = "allow"  # CLI app
print_stderr = "allow"  # CLI app

[lints.rustdoc]
broken_intra_doc_links = "deny"
